[gd_scene load_steps=22 format=4 uid="uid://cnrrta4kt78yp"]

[ext_resource type="Script" uid="uid://cx27jbftcf3jq" path="res://scripts/mision 1 y 2/dataTask.gd" id="1_fk2l8"]
[ext_resource type="Texture2D" uid="uid://dro57mcet1de0" path="res://assets/img/mision 1 y 2/boton op1.png" id="3_paehs"]
[ext_resource type="Texture2D" uid="uid://b58mf2rmlw65u" path="res://assets/img/mision 1 y 2/boton op2.png" id="3_xwe38"]
[ext_resource type="Texture2D" uid="uid://chvrmf877ired" path="res://assets/img/mision 1 y 2/tileset x1.png" id="4_anvkl"]
[ext_resource type="Texture2D" uid="uid://cgorsboej78f3" path="res://assets/img/mision 1 y 2/FolderAntivirus.png" id="4_h56pp"]
[ext_resource type="Texture2D" uid="uid://bbwu5cf3ly0xv" path="res://assets/img/mision 1 y 2/folderTablet.png" id="5_4tc7x"]
[ext_resource type="FontFile" uid="uid://dks6hcy4irrsf" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="7_xwe38"]
[ext_resource type="Texture2D" uid="uid://bbvs7waiyshak" path="res://assets/img/mision 1 y 2/boton cargar.png" id="8_re3bp"]
[ext_resource type="Texture2D" uid="uid://kujsmnkhslic" path="res://assets/img/mision 1 y 2/enemies x1.png" id="9_paehs"]
[ext_resource type="AudioStream" uid="uid://bk7pa8l2xrxhf" path="res://assets/music/musica 2.mp3" id="10_paehs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a36k5"]
texture = ExtResource("4_anvkl")
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
12:2/0 = 0
13:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
64:2/0 = 0
65:2/0 = 0
66:2/0 = 0
67:2/0 = 0
68:2/0 = 0
69:2/0 = 0
70:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
12:3/0 = 0
13:3/0 = 0
15:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
64:3/0 = 0
65:3/0 = 0
66:3/0 = 0
67:3/0 = 0
68:3/0 = 0
69:3/0 = 0
70:3/0 = 0
2:4/0 = 0
8:4/0 = 0
9:4/0 = 0
12:4/0 = 0
13:4/0 = 0
19:4/0 = 0
28:4/0 = 0
29:4/0 = 0
64:4/0 = 0
65:4/0 = 0
2:5/0 = 0
8:5/0 = 0
9:5/0 = 0
12:5/0 = 0
13:5/0 = 0
19:5/0 = 0
28:5/0 = 0
29:5/0 = 0
64:5/0 = 0
65:5/0 = 0
2:6/0 = 0
19:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
2:7/0 = 0
19:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
2:8/0 = 0
19:8/0 = 0
26:8/0 = 0
27:8/0 = 0
2:9/0 = 0
19:9/0 = 0
26:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
2:12/0 = 0
3:12/0 = 0
18:12/0 = 0
19:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
2:13/0 = 0
3:13/0 = 0
18:13/0 = 0
19:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
2:16/0 = 0
8:16/0 = 0
9:16/0 = 0
12:16/0 = 0
13:16/0 = 0
19:16/0 = 0
2:17/0 = 0
8:17/0 = 0
9:17/0 = 0
12:17/0 = 0
13:17/0 = 0
19:17/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
6:18/0 = 0
8:18/0 = 0
9:18/0 = 0
12:18/0 = 0
13:18/0 = 0
15:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
6:19/0 = 0
8:19/0 = 0
9:19/0 = 0
12:19/0 = 0
13:19/0 = 0
15:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
26:19/0 = 0
27:19/0 = 0
28:20/0 = 0
29:20/0 = 0
30:21/0 = 0
30:22/0 = 0
31:22/0 = 0
32:23/0 = 0
33:23/0 = 0

[sub_resource type="TileSet" id="TileSet_6kev4"]
sources/0 = SubResource("TileSetAtlasSource_a36k5")

[sub_resource type="AtlasTexture" id="AtlasTexture_xwe38"]
atlas = ExtResource("9_paehs")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_re3bp"]
atlas = ExtResource("9_paehs")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1h4s"]
atlas = ExtResource("9_paehs")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_degs4"]
atlas = ExtResource("9_paehs")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lf1j"]
atlas = ExtResource("9_paehs")
region = Rect2(160, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt48d"]
atlas = ExtResource("9_paehs")
region = Rect2(192, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjv8k"]
atlas = ExtResource("9_paehs")
region = Rect2(224, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfqb4"]
atlas = ExtResource("9_paehs")
region = Rect2(256, 192, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_k1h4s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwe38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re3bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1h4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_degs4")
}],
"loop": true,
"name": &"caminar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lf1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt48d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjv8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfqb4")
}],
"loop": true,
"name": &"quieto",
"speed": 5.0
}]

[node name="dataTask" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(1.8289216, 1.3883973)
size_flags_horizontal = 6
script = ExtResource("1_fk2l8")

[node name="Node2D" type="Node2D" parent="."]

[node name="TileMapLayers" type="Node2D" parent="Node2D"]

[node name="Foreground" type="TileMapLayer" parent="Node2D/TileMapLayers"]
tile_map_data = PackedByteArray("AAAAAAAAAABAAAMAAFABAAEAAABBAAIAAFACAAIAAABCAAMAAAADAAMAAABCAAMAAAAEAAMAAABCAAMAAAAFAAQAAABCAAMAAAAGAAUAAABCAAMAAAAHAAYAAABCAAMAAAAIAAcAAABCAAMAAAAJAAgAAABCAAMAAAAKAAkAAABCAAMAAAAKAAoAAABCAAMAAAALAAsAAABCAAMAAAAMAAwAAABCAAMAAAANAA0AAABCAAMAAAAOAA4AAABCAAMAAAAPAA4AAABCAAMAAAAQAA8AAABCAAMAAAARABAAAABCAAMAAAARABEAAABCAAMAAAASABIAAABCAAMAAAATABIAAABCAAMAAAAUABMAAABCAAMAAAAVABQAAABCAAMAAAAWABQAAABCAAMAAAAXABUAAABCAAMAAAAYABUAAABCAAMAAAAZABYAAABCAAMAAAAaABYAAABCAAMAAAAaABcAAABCAAMAAAAbABcAAABCAAMAAAAcABgAAABCAAMAAAAdABgAAABCAAMAAAAeABkAAABCAAMAAAAfABkAAABCAAMAAAAAAAEAAABBAAMAAFAAAAIAAABAAAMAAFAAAAMAAABBAAMAAFAAAAQAAABAAAMAAFAAAAUAAABBAAMAAFAAAAYAAABAAAMAAFAAAAcAAABBAAMAAFAAAAgAAABAAAMAAFAAAAkAAABBAAMAAFAAAAoAAABAAAMAAFAAAAsAAABBAAMAAFAAAAwAAABAAAMAAFAAAA0AAABBAAMAAFAAAA4AAABAAAMAAFAAAA8AAABBAAMAAFAAABAAAABAAAMAAFAAABEAAABAAAMAAFAAABIAAABBAAMAAFAAABMAAABAAAMAAFAAABQAAABBAAMAAFAAABUAAABAAAMAAFAAABYAAABBAAMAAFAAABcAAABAAAMAAFABAAAAAABAAAIAAFABAAIAAABAAAIAAFABAAMAAABBAAIAAFABAAQAAABAAAIAAFABAAUAAABBAAIAAFABAAYAAABAAAIAAFABAAcAAABBAAIAAFABAAgAAABAAAIAAFABAAkAAABBAAIAAFABAAoAAABAAAIAAFABAAsAAABBAAIAAFABAAwAAABAAAIAAFABAA0AAABBAAIAAFABAA4AAABAAAIAAFABAA8AAABBAAIAAFABABAAAABAAAIAAFABABEAAABAAAIAAFABABIAAABBAAIAAFABABMAAABAAAIAAFABABQAAABBAAIAAFABABUAAABAAAIAAFABABYAAABBAAIAAFABABcAAABAAAIAAFACAAAAAABAAAIAAAACAAEAAABAAAMAAAACAAMAAABCAAMAAAACAAQAAABCAAMAAAACAAcAAABCAAMAAAACAAgAAABCAAMAAAACAAkAAABBAAQAAAACAAoAAABBAAUAAAACAAsAAABCAAMAAAACAAwAAABCAAMAAAACAA0AAABBAAQAAAACAA4AAABBAAUAAAACAA8AAABCAAMAAAACABAAAABCAAMAAAACABEAAABBAAQAAAACABIAAABBAAUAAAACABMAAABCAAMAAAACABQAAABCAAMAAAACABUAAABBAAQAAAACABYAAABBAAUAAAACABcAAABCAAMAAAADAAAAAABBAAIAAAADAAEAAABBAAMAAAADAAIAAABCAAMAAAADAAQAAABCAAMAAAADAAcAAABCAAMAAAADAAgAAABCAAMAAAADAAkAAABCAAMAAAADAAoAAABCAAMAAAADAAsAAABCAAMAAAADAAwAAABCAAMAAAADAA0AAABCAAMAAAADAA4AAABCAAMAAAADAA8AAABCAAMAAAADABAAAABCAAMAAAADABEAAABCAAMAAAADABIAAABCAAMAAAADABMAAABCAAMAAAADABQAAABCAAMAAAADABUAAABCAAMAAAADABYAAABCAAMAAAADABcAAABCAAMAAAAEAAAAAABAAAIAAAAEAAEAAABAAAMAAAAEAAIAAABCAAMAAAAEAAQAAABCAAMAAAAEAAUAAABCAAMAAAAEAAYAAABCAAMAAAAEAAcAAABCAAMAAAAEAAgAAABCAAMAAAAEAAkAAABCAAMAAAAEAAoAAABCAAMAAAAEAAsAAABCAAMAAAAEAAwAAABCAAMAAAAEAA0AAABCAAMAAAAEAA4AAABCAAMAAAAEAA8AAABCAAMAAAAEABAAAABCAAMAAAAEABEAAABCAAMAAAAEABIAAABCAAMAAAAEABMAAABCAAMAAAAEABQAAABCAAMAAAAEABUAAABCAAMAAAAEABYAAABCAAMAAAAEABcAAABCAAMAAAAFAAAAAABBAAIAAAAFAAEAAABBAAMAAAAFAAIAAABCAAMAAAAFAAMAAABCAAMAAAAFAAUAAABCAAMAAAAFAAYAAABCAAMAAAAFAAcAAABCAAMAAAAFAAgAAABCAAMAAAAFAAkAAABCAAMAAAAFAAoAAABCAAMAAAAFAAsAAABCAAMAAAAFAAwAAABCAAMAAAAFAA0AAABCAAMAAAAFAA4AAABCAAMAAAAFAA8AAABCAAMAAAAFABAAAABCAAMAAAAFABEAAABCAAMAAAAFABIAAABCAAMAAAAFABMAAABCAAMAAAAFABQAAABCAAMAAAAFABUAAABCAAMAAAAFABYAAABCAAMAAAAFABcAAABCAAMAAAAGAAAAAABAAAIAAAAGAAEAAABAAAMAAAAGAAIAAABCAAMAAAAGAAMAAABCAAMAAAAGAAQAAABCAAMAAAAGAAYAAABCAAMAAAAGAAcAAABCAAMAAAAGAAgAAABCAAMAAAAGAAkAAABCAAMAAAAGAAoAAABCAAMAAAAGAAsAAABCAAMAAAAGAAwAAABCAAMAAAAGAA0AAABCAAMAAAAGAA4AAABCAAMAAAAGAA8AAABCAAMAAAAGABAAAABCAAMAAAAGABEAAABCAAMAAAAGABIAAABCAAMAAAAGABMAAABCAAMAAAAGABQAAABCAAMAAAAGABUAAABCAAMAAAAGABYAAABCAAMAAAAGABcAAABCAAMAAAAHAAAAAABBAAIAAAAHAAEAAABBAAMAAAAHAAIAAABCAAMAAAAHAAMAAABCAAMAAAAHAAQAAABCAAMAAAAHAAUAAABCAAMAAAAHAAcAAABCAAMAAAAHAAgAAABCAAMAAAAHAAkAAABCAAMAAAAHAAoAAABCAAMAAAAHAAsAAABCAAMAAAAHAAwAAABCAAMAAAAHAA0AAABCAAMAAAAHAA4AAABCAAMAAAAHAA8AAABCAAMAAAAHABAAAABCAAMAAAAHABEAAABCAAMAAAAHABIAAABCAAMAAAAHABMAAABCAAMAAAAHABQAAABCAAMAAAAHABUAAABCAAMAAAAHABYAAABCAAMAAAAHABcAAABCAAMAAAAIAAAAAABAAAIAAAAIAAEAAABAAAMAAAAIAAIAAABCAAMAAAAIAAMAAABCAAMAAAAIAAQAAABCAAMAAAAIAAUAAABCAAMAAAAIAAYAAABCAAMAAAAIAAgAAABCAAMAAAAIAAkAAABCAAMAAAAIAAoAAABCAAMAAAAIAAsAAABCAAMAAAAIAAwAAABCAAMAAAAIAA0AAABCAAMAAAAIAA4AAABCAAMAAAAIAA8AAABCAAMAAAAIABAAAABCAAMAAAAIABEAAABCAAMAAAAIABIAAABCAAMAAAAIABMAAABCAAMAAAAIABQAAABCAAMAAAAIABUAAABCAAMAAAAIABYAAABCAAMAAAAIABcAAABCAAMAAAAJAAAAAABBAAIAAAAJAAEAAABBAAMAAAAJAAIAAABCAAMAAAAJAAMAAABCAAMAAAAJAAQAAABCAAMAAAAJAAUAAABCAAMAAAAJAAYAAABCAAMAAAAJAAcAAABCAAMAAAAJAAkAAABCAAMAAAAJAAoAAABCAAMAAAAJAAsAAABCAAMAAAAJAAwAAABCAAMAAAAJAA0AAABCAAMAAAAJAA4AAABCAAMAAAAJAA8AAABCAAMAAAAJABAAAABCAAMAAAAJABEAAABCAAMAAAAJABIAAABCAAMAAAAJABMAAABCAAMAAAAJABQAAABCAAMAAAAJABUAAABCAAMAAAAJABYAAABCAAMAAAAJABcAAABCAAMAAAAKAAAAAABAAAIAAAAKAAEAAABAAAMAAAAKAAIAAABCAAMAAAAKAAMAAABCAAMAAAAKAAQAAABCAAMAAAAKAAUAAABCAAMAAAAKAAYAAABCAAMAAAAKAAcAAABCAAMAAAAKAAgAAABCAAMAAAAKAAsAAABCAAMAAAAKAAwAAABCAAMAAAAKAA0AAABCAAMAAAAKAA8AAABCAAMAAAAKABAAAABCAAMAAAAKABEAAABCAAMAAAAKABIAAABCAAMAAAAKABMAAABCAAMAAAAKABQAAABCAAMAAAAKABUAAABCAAMAAAAKABYAAABCAAMAAAAKABcAAABCAAMAAAALAAAAAABBAAIAAAALAAEAAABBAAMAAAALAAIAAABCAAMAAAALAAMAAABCAAMAAAALAAQAAABCAAMAAAALAAUAAABCAAMAAAALAAYAAABCAAMAAAALAAcAAABCAAMAAAALAAgAAABCAAMAAAALAAkAAABCAAMAAAALAAoAAABCAAMAAAALAAwAAABCAAMAAAALAA0AAABCAAMAAAALAA4AAABCAAMAAAALAA8AAABCAAMAAAALABAAAABCAAMAAAALABEAAABCAAMAAAALABIAAABCAAMAAAALABMAAABCAAMAAAALABQAAABCAAMAAAALABUAAABCAAMAAAALABYAAABCAAMAAAALABcAAABCAAMAAAAMAAAAAABAAAIAAAAMAAEAAABAAAMAAAAMAAIAAABCAAMAAAAMAAMAAABCAAMAAAAMAAQAAABCAAMAAAAMAAUAAABCAAMAAAAMAAYAAABCAAMAAAAMAAcAAABCAAMAAAAMAAgAAABCAAMAAAAMAAkAAABCAAMAAAAMAAoAAABCAAMAAAAMAAsAAABCAAMAAAAMAA0AAABCAAMAAAAMAA4AAABCAAMAAAAMAA8AAABCAAMAAAAMABAAAABCAAMAAAAMABEAAABCAAMAAAAMABIAAABCAAMAAAAMABMAAABCAAMAAAAMABQAAABCAAMAAAAMABUAAABCAAMAAAAMABYAAABCAAMAAAAMABcAAABCAAMAAAANAAAAAABBAAIAAAANAAEAAABBAAMAAAANAAIAAABCAAMAAAANAAMAAABCAAMAAAANAAQAAABCAAMAAAANAAUAAABCAAMAAAANAAYAAABCAAMAAAANAAcAAABCAAMAAAANAAgAAABCAAMAAAANAAkAAABCAAMAAAANAAoAAABCAAMAAAANAAsAAABCAAMAAAANAAwAAABCAAMAAAANAA4AAABCAAMAAAANAA8AAABCAAMAAAANABAAAABCAAMAAAANABEAAABCAAMAAAANABIAAABCAAMAAAANABMAAABCAAMAAAANABQAAABCAAMAAAANABUAAABCAAMAAAANABYAAABCAAMAAAANABcAAABCAAMAAAAOAAAAAABAAAIAAAAOAAEAAABAAAMAAAAOAAIAAABCAAMAAAAOAAMAAABCAAMAAAAOAAQAAABCAAMAAAAOAAUAAABCAAMAAAAOAAYAAABCAAMAAAAOAAcAAABCAAMAAAAOAAgAAABCAAMAAAAOAAkAAABCAAMAAAAOAAoAAABCAAMAAAAOAAsAAABCAAMAAAAOAAwAAABCAAMAAAAOAA0AAABCAAMAAAAOAA8AAABCAAMAAAAOABAAAABCAAMAAAAOABEAAABCAAMAAAAOABIAAABCAAMAAAAOABMAAABCAAMAAAAOABQAAABCAAMAAAAOABUAAABCAAMAAAAOABYAAABCAAMAAAAOABcAAABCAAMAAAAPAAAAAABBAAIAAAAPAAEAAABBAAMAAAAPAAIAAABCAAMAAAAPAAMAAABCAAMAAAAPAAQAAABCAAMAAAAPAAUAAABCAAMAAAAPAAYAAABCAAMAAAAPAAcAAABCAAMAAAAPAAgAAABCAAMAAAAPAAkAAABCAAMAAAAPAAoAAABCAAMAAAAPAAsAAABCAAMAAAAPAAwAAABCAAMAAAAPAA0AAABCAAMAAAAPAA8AAABCAAMAAAAPABAAAABCAAMAAAAPABEAAABCAAMAAAAPABIAAABCAAMAAAAPABMAAABCAAMAAAAPABQAAABCAAMAAAAPABUAAABCAAMAAAAPABYAAABCAAMAAAAPABcAAABCAAMAAAAQAAAAAABAAAIAAAAQAAEAAABAAAMAAAAQAAIAAABCAAMAAAAQAAMAAABCAAMAAAAQAAQAAABCAAMAAAAQAAUAAABCAAMAAAAQAAYAAABCAAMAAAAQAAcAAABCAAMAAAAQAAgAAABCAAMAAAAQAAkAAABCAAMAAAAQAAoAAABCAAMAAAAQAAsAAABCAAMAAAAQAAwAAABCAAMAAAAQAA0AAABCAAMAAAAQAA4AAABCAAMAAAAQABAAAABCAAMAAAAQABEAAABCAAMAAAAQABIAAABCAAMAAAAQABMAAABCAAMAAAAQABQAAABCAAMAAAAQABUAAABCAAMAAAAQABYAAABCAAMAAAAQABcAAABCAAMAAAARAAAAAABBAAIAAAARAAEAAABBAAMAAAARAAIAAABCAAMAAAARAAMAAABCAAMAAAARAAQAAABCAAMAAAARAAUAAABCAAMAAAARAAYAAABCAAMAAAARAAcAAABCAAMAAAARAAgAAABCAAMAAAARAAkAAABCAAMAAAARAAoAAABCAAMAAAARAAsAAABCAAMAAAARAAwAAABCAAMAAAARAA0AAABCAAMAAAARAA4AAABCAAMAAAARAA8AAABCAAMAAAARABIAAABCAAMAAAARABMAAABCAAMAAAARABQAAABCAAMAAAARABUAAABCAAMAAAARABYAAABCAAMAAAARABcAAABCAAMAAAASAAAAAABAAAIAAAASAAEAAABAAAMAAAASAAIAAABCAAMAAAASAAMAAABCAAMAAAASAAQAAABCAAMAAAASAAUAAABCAAMAAAASAAYAAABCAAMAAAASAAcAAABCAAMAAAASAAgAAABCAAMAAAASAAkAAABCAAMAAAASAAoAAABCAAMAAAASAAsAAABCAAMAAAASAAwAAABCAAMAAAASAA0AAABCAAMAAAASAA4AAABCAAMAAAASAA8AAABCAAMAAAASABAAAABCAAMAAAASABEAAABCAAMAAAASABMAAABCAAMAAAASABQAAABCAAMAAAASABUAAABCAAMAAAASABYAAABCAAMAAAASABcAAABCAAMAAAATAAAAAABBAAIAAAATAAEAAABBAAMAAAATAAIAAABCAAMAAAATAAMAAABCAAMAAAATAAQAAABCAAMAAAATAAUAAABCAAMAAAATAAYAAABCAAMAAAATAAcAAABCAAMAAAATAAgAAABCAAMAAAATAAkAAABCAAMAAAATAAoAAABCAAMAAAATAAsAAABCAAMAAAATAAwAAABCAAMAAAATAA0AAABCAAMAAAATAA4AAABCAAMAAAATAA8AAABCAAMAAAATABAAAABCAAMAAAATABEAAABCAAMAAAATABMAAABCAAMAAAATABQAAABCAAMAAAATABUAAABCAAMAAAATABYAAABCAAMAAAATABcAAABCAAMAAAAUAAAAAABAAAIAAAAUAAEAAABAAAMAAAAUAAIAAABCAAMAAAAUAAMAAABCAAMAAAAUAAQAAABCAAMAAAAUAAUAAABCAAMAAAAUAAYAAABCAAMAAAAUAAcAAABCAAMAAAAUAAgAAABCAAMAAAAUAAkAAABCAAMAAAAUAAoAAABCAAMAAAAUAAsAAABCAAMAAAAUAAwAAABCAAMAAAAUAA0AAABCAAMAAAAUAA4AAABCAAMAAAAUAA8AAABCAAMAAAAUABAAAABCAAMAAAAUABEAAABCAAMAAAAUABIAAABCAAMAAAAUABQAAABCAAMAAAAUABUAAABCAAMAAAAUABYAAABCAAMAAAAUABcAAABCAAMAAAAVAAAAAABBAAIAAAAVAAEAAABBAAMAAAAVAAIAAABCAAMAAAAVAAMAAABCAAMAAAAVAAQAAABCAAMAAAAVAAUAAABCAAMAAAAVAAYAAABCAAMAAAAVAAcAAABCAAMAAAAVAAgAAABCAAMAAAAVAAkAAABCAAMAAAAVAAoAAABCAAMAAAAVAAsAAABCAAMAAAAVAAwAAABCAAMAAAAVAA0AAABCAAMAAAAVAA4AAABCAAMAAAAVAA8AAABCAAMAAAAVABAAAABCAAMAAAAVABEAAABCAAMAAAAVABIAAABCAAMAAAAVABMAAABCAAMAAAAVABUAAABCAAMAAAAVABYAAABCAAMAAAAVABcAAABCAAMAAAAWAAAAAABAAAIAAAAWAAEAAABAAAMAAAAWAAIAAABCAAMAAAAWAAMAAABCAAMAAAAWAAQAAABCAAMAAAAWAAUAAABCAAMAAAAWAAYAAABCAAMAAAAWAAcAAABCAAMAAAAWAAgAAABCAAMAAAAWAAkAAABCAAMAAAAWAAoAAABCAAMAAAAWAAsAAABCAAMAAAAWAAwAAABCAAMAAAAWAA0AAABCAAMAAAAWAA4AAABCAAMAAAAWAA8AAABCAAMAAAAWABAAAABCAAMAAAAWABEAAABCAAMAAAAWABIAAABCAAMAAAAWABMAAABCAAMAAAAWABUAAABCAAMAAAAWABYAAABCAAMAAAAWABcAAABCAAMAAAAXAAAAAABBAAIAAAAXAAEAAABBAAMAAAAXAAIAAABCAAMAAAAXAAMAAABCAAMAAAAXAAQAAABCAAMAAAAXAAUAAABCAAMAAAAXAAYAAABCAAMAAAAXAAcAAABCAAMAAAAXAAgAAABCAAMAAAAXAAkAAABCAAMAAAAXAAoAAABCAAMAAAAXAAsAAABCAAMAAAAXAAwAAABCAAMAAAAXAA0AAABCAAMAAAAXAA4AAABCAAMAAAAXAA8AAABCAAMAAAAXABAAAABCAAMAAAAXABEAAABCAAMAAAAXABIAAABCAAMAAAAXABMAAABCAAMAAAAXABQAAABCAAMAAAAXABYAAABCAAMAAAAXABcAAABCAAMAAAAYAAAAAABAAAIAAAAYAAEAAABAAAMAAAAYAAIAAABCAAMAAAAYAAMAAABCAAMAAAAYAAQAAABCAAMAAAAYAAUAAABCAAMAAAAYAAYAAABCAAMAAAAYAAcAAABCAAMAAAAYAAgAAABCAAMAAAAYAAkAAABCAAMAAAAYAAoAAABCAAMAAAAYAAsAAABCAAMAAAAYAAwAAABCAAMAAAAYAA0AAABCAAMAAAAYAA4AAABCAAMAAAAYAA8AAABCAAMAAAAYABAAAABCAAMAAAAYABEAAABCAAMAAAAYABIAAABCAAMAAAAYABMAAABCAAMAAAAYABQAAABCAAMAAAAYABYAAABCAAMAAAAYABcAAABCAAMAAAAZAAAAAABBAAIAAAAZAAEAAABBAAMAAAAZAAIAAABCAAMAAAAZAAMAAABCAAMAAAAZAAQAAABCAAMAAAAZAAUAAABCAAMAAAAZAAYAAABCAAMAAAAZAAcAAABCAAMAAAAZAAgAAABCAAMAAAAZAAkAAABCAAMAAAAZAAoAAABCAAMAAAAZAAsAAABCAAMAAAAZAAwAAABCAAMAAAAZAA0AAABCAAMAAAAZAA4AAABCAAMAAAAZAA8AAABCAAMAAAAZABAAAABCAAMAAAAZABEAAABCAAMAAAAZABIAAABCAAMAAAAZABMAAABCAAMAAAAZABQAAABCAAMAAAAZABUAAABCAAMAAAAZABcAAABCAAMAAAAaAAAAAABAAAIAAAAaAAEAAABAAAMAAAAaAAIAAABCAAMAAAAaAAMAAABCAAMAAAAaAAQAAABCAAMAAAAaAAUAAABCAAMAAAAaAAYAAABCAAMAAAAaAAcAAABCAAMAAAAaAAgAAABCAAMAAAAaAAkAAABCAAMAAAAaAAoAAABCAAMAAAAaAAsAAABCAAMAAAAaAAwAAABCAAMAAAAaAA0AAABCAAMAAAAaAA4AAABCAAMAAAAaAA8AAABCAAMAAAAaABAAAABCAAMAAAAaABEAAABCAAMAAAAaABIAAABCAAMAAAAaABMAAABCAAMAAAAaABQAAABCAAMAAAAaABUAAABCAAMAAAAbAAAAAABBAAIAAAAbAAEAAABBAAMAAAAbAAIAAABCAAMAAAAbAAMAAABCAAMAAAAbAAQAAABCAAMAAAAbAAUAAABCAAMAAAAbAAYAAABCAAMAAAAbAAcAAABCAAMAAAAbAAgAAABCAAMAAAAbAAkAAABCAAMAAAAbAAoAAABCAAMAAAAbAAsAAABCAAMAAAAbAAwAAABCAAMAAAAbAA0AAABCAAMAAAAbAA4AAABCAAMAAAAbAA8AAABCAAMAAAAbABAAAABCAAMAAAAbABEAAABCAAMAAAAbABIAAABCAAMAAAAbABMAAABCAAMAAAAbABQAAABCAAMAAAAbABUAAABCAAMAAAAbABYAAABCAAMAAAAcAAAAAABAAAIAAAAcAAEAAABAAAMAAAAcAAIAAABCAAMAAAAcAAMAAABCAAMAAAAcAAQAAABCAAMAAAAcAAUAAABCAAMAAAAcAAYAAABCAAMAAAAcAAcAAABCAAMAAAAcAAgAAABCAAMAAAAcAAkAAABCAAMAAAAcAAoAAABCAAMAAAAcAAsAAABCAAMAAAAcAAwAAABCAAMAAAAcAA0AAABCAAMAAAAcAA4AAABCAAMAAAAcAA8AAABCAAMAAAAcABAAAABCAAMAAAAcABEAAABCAAMAAAAcABIAAABCAAMAAAAcABMAAABCAAMAAAAcABQAAABCAAMAAAAcABUAAABCAAMAAAAcABYAAABCAAMAAAAcABcAAABCAAMAAAAdAAAAAABBAAIAAAAdAAEAAABBAAMAAAAdAAIAAABCAAMAAAAdAAMAAABCAAMAAAAdAAQAAABCAAMAAAAdAAUAAABCAAMAAAAdAAYAAABCAAMAAAAdAAcAAABCAAMAAAAdAAgAAABCAAMAAAAdAAkAAABCAAMAAAAdAAoAAABCAAMAAAAdAAsAAABCAAMAAAAdAAwAAABCAAMAAAAdAA0AAABCAAMAAAAdAA4AAABCAAMAAAAdAA8AAABCAAMAAAAdABAAAABCAAMAAAAdABEAAABCAAMAAAAdABIAAABCAAMAAAAdABMAAABCAAMAAAAdABQAAABCAAMAAAAdABUAAABCAAMAAAAdABYAAABCAAMAAAAdABcAAABCAAMAAAAeAAAAAABAAAIAAAAeAAEAAABAAAMAAAAeAAIAAABCAAMAAAAeAAMAAABCAAMAAAAeAAQAAABCAAMAAAAeAAUAAABCAAMAAAAeAAYAAABCAAMAAAAeAAcAAABCAAMAAAAeAAgAAABCAAMAAAAeAAkAAABCAAMAAAAeAAoAAABCAAMAAAAeAAsAAABCAAMAAAAeAAwAAABCAAMAAAAeAA0AAABCAAMAAAAeAA4AAABCAAMAAAAeAA8AAABCAAMAAAAeABAAAABCAAMAAAAeABEAAABCAAMAAAAeABIAAABCAAMAAAAeABMAAABCAAMAAAAeABQAAABCAAMAAAAeABUAAABCAAMAAAAeABYAAABCAAMAAAAeABcAAABCAAMAAAAfAAAAAABBAAIAAAAfAAEAAABBAAMAAAAfAAIAAABCAAMAAAAfAAMAAABCAAMAAAAfAAQAAABCAAMAAAAfAAUAAABCAAMAAAAfAAYAAABCAAMAAAAfAAcAAABCAAMAAAAfAAgAAABCAAMAAAAfAAkAAABCAAMAAAAfAAoAAABCAAMAAAAfAAsAAABCAAMAAAAfAAwAAABCAAMAAAAfAA0AAABCAAMAAAAfAA4AAABCAAMAAAAfAA8AAABCAAMAAAAfABAAAABCAAMAAAAfABEAAABCAAMAAAAfABIAAABCAAMAAAAfABMAAABCAAMAAAAfABQAAABCAAMAAAAfABUAAABCAAMAAAAfABYAAABCAAMAAAAfABcAAABCAAMAAAAgAAAAAABAAAIAAAAgAAEAAABAAAMAAAAgAAIAAABCAAMAAAAgAAMAAABCAAMAAAAgAAQAAABCAAMAAAAgAAUAAABCAAMAAAAgAAYAAABCAAMAAAAgAAcAAABCAAMAAAAgAAgAAABCAAMAAAAgAAkAAABCAAMAAAAgAAoAAABCAAMAAAAgAAsAAABCAAMAAAAgAAwAAABCAAMAAAAgAA0AAABCAAMAAAAgAA4AAABCAAMAAAAgAA8AAABCAAMAAAAgABAAAABCAAMAAAAgABEAAABCAAMAAAAgABIAAABCAAMAAAAgABMAAABCAAMAAAAgABQAAABCAAMAAAAgABUAAABCAAMAAAAgABYAAABCAAMAAAAgABcAAABCAAMAAAAhAAAAAABBAAIAAAAhAAEAAABBAAMAAAAhAAIAAABCAAMAAAAhAAMAAABCAAMAAAAhAAQAAABCAAMAAAAhAAUAAABCAAMAAAAhAAYAAABCAAMAAAAhAAcAAABCAAMAAAAhAAgAAABCAAMAAAAhAAkAAABCAAMAAAAhAAoAAABCAAMAAAAhAAsAAABCAAMAAAAhAAwAAABCAAMAAAAhAA0AAABCAAMAAAAhAA4AAABCAAMAAAAhAA8AAABCAAMAAAAhABAAAABCAAMAAAAhABEAAABCAAMAAAAhABIAAABCAAMAAAAhABMAAABCAAMAAAAhABQAAABCAAMAAAAhABUAAABCAAMAAAAhABYAAABCAAMAAAAhABcAAABCAAMAAAAiAAAAAABAAAIAAAAiAAEAAABAAAMAAAAiAAIAAABCAAMAAAAiAAMAAABCAAMAAAAiAAQAAABCAAMAAAAiAAUAAABCAAMAAAAiAAYAAABCAAMAAAAiAAcAAABCAAMAAAAiAAgAAABCAAMAAAAiAAkAAABCAAMAAAAiAAoAAABCAAMAAAAiAAsAAABCAAMAAAAiAAwAAABCAAMAAAAiAA0AAABCAAMAAAAiAA4AAABCAAMAAAAiAA8AAABCAAMAAAAiABAAAABCAAMAAAAiABEAAABCAAMAAAAiABIAAABCAAMAAAAiABMAAABCAAMAAAAiABQAAABCAAMAAAAiABUAAABCAAMAAAAiABYAAABCAAMAAAAiABcAAABCAAMAAAAjAAAAAABBAAIAAAAjAAEAAABBAAMAAAAjAAIAAABCAAMAAAAjAAMAAABCAAMAAAAjAAQAAABCAAMAAAAjAAUAAABCAAMAAAAjAAYAAABCAAMAAAAjAAcAAABCAAMAAAAjAAgAAABCAAMAAAAjAAkAAABCAAMAAAAjAAoAAABCAAMAAAAjAAsAAABCAAMAAAAjAAwAAABCAAMAAAAjAA0AAABCAAMAAAAjAA4AAABCAAMAAAAjAA8AAABCAAMAAAAjABAAAABCAAMAAAAjABEAAABCAAMAAAAjABIAAABCAAMAAAAjABMAAABCAAMAAAAjABQAAABCAAMAAAAjABUAAABCAAMAAAAjABYAAABCAAMAAAAjABcAAABCAAMAAAAkAAAAAABAAAIAAAAkAAEAAABAAAMAAAAkAAIAAABCAAMAAAAkAAMAAABCAAMAAAAkAAQAAABCAAMAAAAkAAUAAABAAAQAAAAkAAYAAABAAAUAAAAkAAcAAABCAAMAAAAkAAgAAABCAAMAAAAkAAkAAABBAAUAADAkAAoAAABBAAQAADAkAAsAAABCAAMAAAAkAAwAAABCAAMAAAAkAA0AAABBAAUAADAkAA4AAABBAAQAADAkAA8AAABCAAMAAAAkABAAAABCAAMAAAAkABEAAABBAAUAADAkABIAAABBAAQAADAkABMAAABCAAMAAAAkABQAAABCAAMAAAAkABUAAABBAAUAADAkABYAAABBAAQAADAkABcAAABCAAMAAAAlAAAAAABAAAMAAFAlAAEAAABBAAMAAFAlAAIAAABAAAMAAFAlAAMAAABBAAMAAFAlAAQAAABAAAMAAFAlAAUAAABBAAMAAFAlAAYAAABAAAMAAFAlAAcAAABBAAMAAFAlAAgAAABAAAMAAFAlAAkAAABBAAMAAFAlAAoAAABAAAMAAFAlAAsAAABBAAMAAFAlAAwAAABAAAMAAFAlAA0AAABBAAMAAFAlAA4AAABAAAMAAFAlAA8AAABBAAMAAFAlABAAAABAAAMAAFAlABEAAABBAAMAAFAlABIAAABAAAMAAFAlABMAAABBAAMAAFAlABQAAABAAAMAAFAlABUAAABBAAMAAFAlABYAAABAAAMAAFAlABcAAABBAAMAAFAmAAAAAABAAAIAAFAmAAEAAABBAAIAAFAmAAIAAABAAAIAAFAmAAMAAABBAAIAAFAmAAQAAABAAAIAAFAmAAUAAABBAAIAAFAmAAYAAABAAAIAAFAmAAcAAABBAAIAAFAmAAgAAABAAAIAAFAmAAkAAABBAAIAAFAmAAoAAABAAAIAAFAmAAsAAABBAAIAAFAmAAwAAABAAAIAAFAmAA0AAABBAAIAAFAmAA4AAABAAAIAAFAmAA8AAABBAAIAAFAmABAAAABAAAIAAFAmABEAAABBAAIAAFAmABIAAABAAAIAAFAmABMAAABBAAIAAFAmABQAAABAAAIAAFAmABUAAABBAAIAAFAmABYAAABAAAIAAFAmABcAAABBAAIAAFAdABkAAABCAAMAAAAdABoAAABCAAMAAAAdABsAAABAAAIAAAAeABgAAABCAAMAAAAeABoAAABCAAMAAAAeABsAAABBAAIAAAAfABgAAABCAAMAAAAfABoAAABCAAMAAAAfABsAAABAAAIAAAAgABgAAABCAAMAAAAgABkAAABCAAMAAAAgABoAAABCAAMAAAAgABsAAABBAAIAAAAhABgAAABCAAMAAAAhABkAAABCAAMAAAAhABoAAABCAAMAAAAhABsAAABAAAIAAAAiABgAAABCAAMAAAAiABkAAABCAAMAAAAiABoAAABCAAMAAAAiABsAAABBAAIAAAAjABgAAABCAAMAAAAjABkAAABCAAMAAAAjABoAAABCAAMAAAAjABsAAABAAAIAAAAkABgAAABCAAMAAAAkABkAAABBAAUAADAkABoAAABBAAQAADAkABsAAABBAAIAAAAlABgAAABAAAMAAFAlABkAAABBAAMAAFAlABoAAABAAAMAAFAlABsAAABAAAMAAFAmABgAAABAAAIAAFAmABkAAABBAAIAAFAmABoAAABAAAIAAFAmABsAAABAAAIAAFAAABgAAABBAAMAAFAAABkAAABAAAMAAFAAABoAAABBAAMAAFAAABsAAABAAAMAAFAAABwAAABBAAMAAFABABgAAABBAAIAAFABABkAAABAAAIAAFABABoAAABBAAIAAFABABsAAABAAAIAAFABABwAAABBAAIAAFACABgAAABDAAMAAAACABkAAABBAAQAAAACABoAAABBAAUAAAACABsAAABBAAIAAAACABwAAABBAAMAAAADABgAAABDAAMAAAADABkAAABDAAMAAAADABoAAABCAAMAAAADABsAAABAAAIAAAADABwAAABAAAMAAAAEABgAAABCAAMAAAAEABkAAABCAAMAAAAEABoAAABCAAMAAAAEABsAAABBAAIAAAAEABwAAABBAAMAAAAFABgAAABCAAMAAAAFABkAAABCAAMAAAAFABoAAABCAAMAAAAFABsAAABAAAIAAAAFABwAAABAAAMAAAAGABgAAABCAAMAAAAGABkAAABCAAMAAAAGABoAAABCAAMAAAAGABsAAABBAAIAAAAGABwAAABBAAMAAAAHABgAAABCAAMAAAAHABkAAABCAAMAAAAHABoAAABCAAMAAAAHABsAAABAAAIAAAAHABwAAABAAAMAAAAIABgAAABCAAMAAAAIABkAAABCAAMAAAAIABoAAABCAAMAAAAIABsAAABBAAIAAAAIABwAAABBAAMAAAAJABgAAABCAAMAAAAJABkAAABCAAMAAAAJABoAAABCAAMAAAAJABsAAABAAAIAAAAJABwAAABAAAMAAAAKABgAAABCAAMAAAAKABkAAABCAAMAAAAKABoAAABCAAMAAAAKABsAAABBAAIAAAAKABwAAABBAAMAAAALABgAAABCAAMAAAALABkAAABCAAMAAAALABoAAABCAAMAAAALABsAAABAAAIAAAALABwAAABAAAMAAAAMABgAAABCAAMAAAAMABkAAABCAAMAAAAMABoAAABCAAMAAAAMABsAAABBAAIAAAAMABwAAABBAAMAAAANABgAAABCAAMAAAANABkAAABCAAMAAAANABoAAABCAAMAAAANABsAAABAAAIAAAANABwAAABAAAMAAAAOABgAAABCAAMAAAAOABkAAABCAAMAAAAOABoAAABCAAMAAAAOABsAAABBAAIAAAAOABwAAABBAAMAAAAPABgAAABCAAMAAAAPABkAAABCAAMAAAAPABoAAABCAAMAAAAPABsAAABAAAIAAAAPABwAAABAAAMAAAAQABgAAABCAAMAAAAQABkAAABCAAMAAAAQABoAAABCAAMAAAAQABsAAABBAAIAAAAQABwAAABBAAMAAAARABgAAABCAAMAAAARABkAAABCAAMAAAARABoAAABCAAMAAAARABsAAABAAAIAAAARABwAAABAAAMAAAASABgAAABCAAMAAAASABkAAABCAAMAAAASABoAAABCAAMAAAASABsAAABBAAIAAAASABwAAABBAAMAAAATABgAAABCAAMAAAATABkAAABCAAMAAAATABoAAABCAAMAAAATABsAAABAAAIAAAATABwAAABAAAMAAAAUABgAAABCAAMAAAAUABkAAABCAAMAAAAUABoAAABCAAMAAAAUABsAAABBAAIAAAAUABwAAABBAAMAAAAVABgAAABCAAMAAAAVABkAAABCAAMAAAAVABoAAABCAAMAAAAVABsAAABAAAIAAAAVABwAAABAAAMAAAAWABgAAABCAAMAAAAWABkAAABCAAMAAAAWABoAAABCAAMAAAAWABsAAABBAAIAAAAWABwAAABBAAMAAAAXABgAAABCAAMAAAAXABkAAABCAAMAAAAXABoAAABCAAMAAAAXABsAAABAAAIAAAAXABwAAABAAAMAAAAYABgAAABCAAMAAAAYABkAAABCAAMAAAAYABoAAABCAAMAAAAYABsAAABBAAIAAAAYABwAAABBAAMAAAAZABgAAABCAAMAAAAZABkAAABCAAMAAAAZABoAAABCAAMAAAAZABsAAABAAAIAAAAZABwAAABAAAMAAAAaABgAAABCAAMAAAAaABkAAABCAAMAAAAaABoAAABCAAMAAAAaABsAAABBAAIAAAAaABwAAABBAAMAAAAbABgAAABCAAMAAAAbABkAAABCAAMAAAAbABoAAABCAAMAAAAbABsAAABAAAIAAAAbABwAAABAAAMAAAAcABkAAABCAAMAAAAcABoAAABCAAMAAAAcABsAAABBAAIAAAAcABwAAABBAAMAAAAdABwAAABAAAMAAAAeABwAAABBAAMAAAAfABwAAABAAAMAAAAgABwAAABBAAMAAAAhABwAAABAAAMAAAAiABwAAABBAAMAAAAjABwAAABAAAMAAAAkABwAAABBAAMAAAAlABwAAABBAAMAAFAmABwAAABBAAIAAFAKAA4AAABCAAMAAAACAAYAAABBAAUAAAADAAYAAABCAAMAAAADAAUAAABCAAMAAAACAAUAAABBAAQAAAA=")
tile_set = SubResource("TileSet_6kev4")

[node name="Background" type="TileMapLayer" parent="Node2D/TileMapLayers"]

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 2.0
offset_right = 622.0
offset_bottom = 462.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = -87.0
offset_top = 114.0
offset_right = 743.0
offset_bottom = 203.0
scale = Vector2(0.9432117, 1.6165582)
alignment = 1

[node name="btn_correcta" type="TextureButton" parent="Panel/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_xwe38")

[node name="btn_incorrecta" type="TextureButton" parent="Panel/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_paehs")

[node name="icon_left" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = -22.0
offset_top = 182.0
offset_right = 222.0
offset_bottom = 353.0
texture = ExtResource("4_h56pp")
expand_mode = 1

[node name="icon_right" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 415.0
offset_top = 199.0
offset_right = 633.0
offset_bottom = 353.0
texture = ExtResource("5_4tc7x")
expand_mode = 1

[node name="progress_bar" type="ProgressBar" parent="Panel"]
layout_mode = 0
offset_left = 159.0
offset_top = 276.0
offset_right = 462.0
offset_bottom = 303.0
rounded = true

[node name="status" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 122.0
offset_top = 324.0
offset_right = 488.0
offset_bottom = 347.0
theme_override_fonts/font = ExtResource("7_xwe38")

[node name="btn_upload" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 204.0
offset_top = 322.0
offset_right = 435.0
offset_bottom = 408.0
texture_normal = ExtResource("8_re3bp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Panel"]
position = Vector2(175, 253)
scale = Vector2(1.203125, 1.203125)
sprite_frames = SubResource("SpriteFrames_k1h4s")
animation = &"caminar"
frame_progress = 0.11001901

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_paehs")
autoplay = true
parameters/looping = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 35.0
offset_right = 592.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("7_xwe38")
text = "¿Cuál de esta medidas de seguridad proporciona una capa de 
   protección adicional después  de que un atacante haya
           obtenido la contraseña de un usuario?"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 415.0
offset_top = 201.0
offset_right = 455.0
offset_bottom = 241.0

[connection signal="pressed" from="Panel/HBoxContainer/btn_correcta" to="." method="_on_btn_correcta_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/btn_incorrecta" to="." method="_on_btn_incorrecta_pressed"]
[connection signal="pressed" from="Panel/btn_upload" to="." method="_on_btn_upload_pressed"]
